--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,3 +1,8 @@
+---
+import Header from '@/components/Header/index.astro';
+import Footer from '@/components/Footer/index.astro';
+---
+
 <!doctype html>
 <html lang="en">
   <head>
@@ -8,15 +13,58 @@
     <title>Astro Basics</title>
   </head>
   <body>
-    <slot />
+    <Header />
+    <main>
+      <slot />
+    </main>
+    <Footer />
   </body>
 </html>
 
-<style>
+<style lang="scss" is:global>
+  :root {
+    font-size: 16px;
+  }
+
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+
   html,
   body {
-    margin: 0;
-    width: 100%;
-    height: 100%;
+    letter-spacing: 0.5px;
+  }
+
+  main {
+    padding-top: $header-height;
+    min-height: 100vh;
+  }
+
+  a {
+    text-decoration: none;
+    color: $color-primary;
+    position: relative;
+
+    &::after {
+      content: '';
+      display: block;
+      width: 0;
+      height: 2px;
+      background-color: $color-primary;
+      position: absolute;
+      bottom: -1px;
+      transition: all $transition;
+    }
+
+    &:hover {
+      color: $color-primary-light;
+
+      &::after {
+        width: 100%;
+        background-color: $color-primary-light;
+      }
+    }
   }
 </style>
