--- a/src/components/Header/index.astro
+++ b/src/components/Header/index.astro
@@ -36,7 +36,7 @@ const pages = [
   header {
     padding: 0 10px;
     height: $header-height;
-    background-color: $color-background;
+    background-color: $color-bg;
     position: sticky;
     top: 0;
     left: 0;
