--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -38,8 +38,8 @@ import Footer from '@/components/Footer/index.astro';
   }
 
   main {
-    padding-top: $header-height;
-    min-height: 100vh;
+    min-height: $main-height;
+    padding: 20px;
   }
 
   a {
