--- a/src/styles/modules/_colors.scss
+++ b/src/styles/modules/_colors.scss
@@ -1,6 +1,8 @@
 $color-primary:#2a4d97;
 $color-primary-light:#406ac3;
 $color-text: #000;
-$color-background: #fff;
-$color-background-dark: #d9d9d9;
+$color-bg: #fff;
+$color-on-bg: #000;
+$color-on-bg-light: #959595;
+$color-bg-dark: #d9d9d9;
 $color-shadow: rgba(0, 0, 0, 0.1);
