feat: トップ画面

--- a/src/components/Header/index.astro
+++ b/src/components/Header/index.astro
@@ -45,7 +45,7 @@ const pages = [
     left: 0;
     right: 0;
     z-index: 1000;
-    box-shadow: $shadow;
+    box-shadow: $shadow-header;
 
     nav {
       height: 100%;
