--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -37,7 +37,7 @@ import Footer from '@/components/Footer/index.astro';
 
   main {
     min-height: $main-height;
-    padding: 20px;
+    padding: 20px 20px 60px;
   }
 
   a {
