--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,11 +9,12 @@ import RecentPosts from './_sections/RecentPosts.astro';
 
 <Layout>
   <main>
-    <TopSection class="top-section" />
-    <NewsSection class="news-section" />
+    <div class="side">
+      <TopSection class="top-section" />
+      <NewsSection class="news-section" />
+    </div>
 
     <NoticeSection class="notice-section" />
-    <AboutSection class="about-section" />
     <AboutSection class="about-section" />
     <RecentPosts class="posts-section" />
   </main>
@@ -21,29 +22,32 @@ import RecentPosts from './_sections/RecentPosts.astro';
 
 <style lang="scss">
   main {
+    padding: 20px 24px 60px 20px;
     display: grid;
     grid-template-columns: repeat(12, 1fr);
     gap: 30px;
 
-    .top-section {
+    .side {
       grid-column: 1/4;
-      grid-row: 1/4;
+      grid-row: span 3;
+
+      display: flex;
+      flex-direction: column;
+      gap: 30px;
+
+      @include mobile {
+        display: contents;
+      }
     }
 
     .notice-section {
       grid-column: span 9;
-      grid-row: span 2;
     }
 
     .about-section {
       grid-column: span 9;
-      grid-row: span 2;
     }
 
-    .news-section {
-      grid-column: 1/4;
-      grid-row: 4/7;
-    }
     .posts-section {
       grid-column: 4/-1;
     }
