--- a/src/components/Header/index.astro
+++ b/src/components/Header/index.astro
@@ -7,10 +7,11 @@ import HamburgerMenu from './HamburgerMenu.astro';
 const pages = [
   { title: 'home', href: '/' },
   { title: 'about', href: '/about' },
-  { title: 'member', href: '/members' },
-  { title: 'publication', href: '/publications' },
-  { title: 'award', href: '/awards' },
-  { title: 'post', href: '/posts' },
+  { title: 'member', href: '/member' },
+  { title: 'publication', href: '/publication' },
+  { title: 'award', href: '/award' },
+  { title: 'access', href: '/access' },
+  { title: 'post', href: '/post' },
 ];
 ---
 
