--- a/src/pages/_sections/RecentPosts.astro
+++ b/src/pages/_sections/RecentPosts.astro
@@ -26,7 +26,7 @@ const posts = await getPosts(0, 6);
 <style lang="scss">
   .posts {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 20px;
 
     .title {
