feat: ヘッダーのレスポンシブ対応

--- a/src/components/Header/HamburgerMenu.astro
+++ b/src/components/Header/HamburgerMenu.astro
@@ -124,6 +124,7 @@ const { pages, class: className, ...rest } = Astro.props;
           text-decoration: none;
           display: inline-block;
           transition: all $transition;
+          text-transform: capitalize;
 
           &:hover {
             padding-left: 10px;
