--- a/src/components/Header/HamburgerMenu.astro
+++ b/src/components/Header/HamburgerMenu.astro
@@ -1,11 +1,12 @@
 ---
+import type { Path } from './index.astro';
+
 interface Props {
-  // TODO
-  pages: { title: string; href: string }[];
+  paths: Path[];
   class?: string;
 }
 
-const { pages, class: className, ...rest } = Astro.props;
+const { paths, class: className, ...rest } = Astro.props;
 ---
 
 <div class:list={['hamburger-menu', className]} {...rest}>
@@ -22,9 +23,9 @@ const { pages, class: className, ...rest } = Astro.props;
 
     <ul>
       {
-        pages.map((page) => (
+        paths.map((path) => (
           <li>
-            <a href={page.href}>{page.title}</a>
+            <a href={path.link}>{path.page}</a>
           </li>
         ))
       }
