--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -43,8 +43,10 @@ const { class: className, ...rest } = Astro.props;
   }
 
   main {
-    min-height: $main-height;
+    margin-inline: auto;
     padding: 20px 20px 60px;
+    max-width: 1200px;
+    min-height: $main-height;
   }
 
   a {
