--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -44,7 +44,7 @@ const { class: className, ...rest } = Astro.props;
 
   main {
     margin-inline: auto;
-    padding: 20px 20px 60px;
+    padding: 40px 24px 60px 20px;
     max-width: 1200px;
     min-height: $main-height;
   }
