--- a/src/components/PostCard/index.astro
+++ b/src/components/PostCard/index.astro
@@ -10,7 +10,10 @@ const { post } = Astro.props;
 ---
 
 <a class="post" href={post.data.link}>
-  <h3 class="post-title">{post.data.title}</h3>
+  <div class="container">
+    <h3 class="post-title">{post.data.title}</h3>
+    <h3 class="crated-at">{post.data.createdAtStr}</h3>
+  </div>
   <Image class="thumbnail" src={getThumbnail(post)} alt={post.data.title} width="480" height="270" />
 </a>
 
@@ -24,19 +27,21 @@ const { post } = Astro.props;
     box-shadow: $shadow;
     cursor: pointer;
 
-    .post-title {
+    .container {
+      margin: auto;
       padding: 20px;
       width: fit-content;
       height: fit-content;
-      color: $color-text;
       text-align: center;
       position: absolute;
-      margin: auto;
       inset: 0;
-      line-height: 100%;
+      z-index: 1;
       opacity: 0;
       transition: opacity $transition;
-      z-index: 1;
+
+      .post-title {
+        color: $color-text;
+      }
     }
 
     .thumbnail {
@@ -47,7 +52,7 @@ const { post } = Astro.props;
     }
 
     &:hover {
-      .post-title {
+      .container {
         opacity: 1;
       }
 
