change: マークダウンのスタイル

--- a/src/styles/modules/_colors.scss
+++ b/src/styles/modules/_colors.scss
@@ -3,6 +3,7 @@ $color-primary-light:#406ac3;
 $color-text: #000;
 $color-bg: #fff;
 $color-on-bg: #000;
+$color-on-bg-light: #1d2020;
 $color-on-bg-light: #959595;
 $color-bg-dark: #d9d9d9;
 $color-shadow: rgba(0, 0, 0, 0.1);
