--- a/src/styles/md-style.scss
+++ b/src/styles/md-style.scss
@@ -70,15 +70,20 @@ article {
     }
   }
 
-  pre > code {
-    display: block;
-    padding: 10.5px;
-    font-size: 13px;
-    line-height: 1.6;
-    color: $color-on-bg;
-    word-break: break-all;
-    word-wrap: break-word;
-    background-color: $color-bg-dark;
+  pre {
+    margin: 25px 0;
+    border-radius: 10px;
+
+    & > code {
+      display: block;
+      padding: 10.5px;
+      font-size: 13px;
+      line-height: 1.6;
+      color: $color-bg;
+      word-break: break-all;
+      word-wrap: break-word;
+      background-color: $color-on-bg;
+    }
   }
 
   table {
@@ -146,26 +151,71 @@ article[data-page='award'] {
 
 article[data-page='post'] {
   h1 {
+    margin: 65px 0 10px;
     font-size: 1.8rem;
   }
 
   h2 {
+    margin: 65px 0 10px;
     font-size: 1.6rem;
   }
 
   h3 {
+    margin: 45px 0 10px;
     font-size: 1.4rem;
   }
 
   h4 {
+    margin: 45px 0 10px;
     font-size: 1.2rem;
   }
 
   h5 {
+    margin: 20px 0 10px;
     font-size: 1rem;
   }
 
   h6 {
+    margin: 20px 0 10px;
     font-size: 0.8rem;
+  }
+
+  h1 + h1,
+  h1 + h2,
+  h1 + h3,
+  h1 + h4,
+  h1 + h5,
+  h1 + h6,
+  h2 + h1,
+  h2 + h2,
+  h2 + h3,
+  h2 + h4,
+  h2 + h5,
+  h2 + h6,
+  h3 + h1,
+  h3 + h2,
+  h3 + h3,
+  h3 + h4,
+  h3 + h5,
+  h3 + h6,
+  h4 + h1,
+  h4 + h2,
+  h4 + h3,
+  h4 + h4,
+  h4 + h5,
+  h4 + h6,
+  h5 + h1,
+  h5 + h2,
+  h5 + h3,
+  h5 + h4,
+  h5 + h5,
+  h5 + h6,
+  h6 + h1,
+  h6 + h2,
+  h6 + h3,
+  h6 + h4,
+  h6 + h5,
+  h6 + h6 {
+    margin-top: 0;
   }
 }
