--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -51,7 +51,7 @@ function link(category: string, page: number = 1) {
 }
 ---
 
-<Layout class="main">
+<Layout class="main" title='投稿一覧'>
   <h2 class="title">投稿一覧</h2>
   <div class="keywords">
     {
