--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,11 +1,27 @@
 ---
 import Header from '@/components/Header/index.astro';
 import Footer from '@/components/Footer/index.astro';
+import {
+  CATEGORY,
+  DESCRIPTION,
+  FAVICON,
+  FAVICON_TYPE,
+  KEY_WORDS,
+  OGP,
+  OGP_HEIGHT,
+  OGP_TYPE,
+  OGP_WIDTH,
+  SITE_NAME,
+  TWITTER_CARD_TYPE,
+} from '@/consts/meta';
 
 interface Props {
+  title?: string;
+  description?: string;
   class?: string;
 }
-const { class: className, ...rest } = Astro.props;
+const { title, description, class: className, ...rest } = Astro.props;
+const OGP_URL = new URL(OGP.src, Astro.url).toString();
 ---
 
 <!doctype html>
@@ -13,9 +29,31 @@ const { class: className, ...rest } = Astro.props;
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type={FAVICON_TYPE} href={FAVICON.src} />
     <meta name="generator" content={Astro.generator} />
-    <title>Astro Basics</title>
+    <title>{title == undefined ? '愛知工業大学 梶研究室' : `${title} | 梶研`}</title>
+
+    <meta name="description" content={description ?? DESCRIPTION} />
+    <meta name="application-name" content={SITE_NAME} />
+    <meta name="keywords" content={KEY_WORDS.join(',')} />
+    <meta name="category" content={CATEGORY} />
+    <meta property="og:title" content={SITE_NAME} />
+    <meta property="og:description" content={description ?? DESCRIPTION} />
+    <meta property="og:url" content={Astro.url} />
+    <meta property="og:site_name" content={SITE_NAME} />
+    <meta property="og:locale" content="ja_JP" />
+    <meta property="og:image:type" content={OGP_TYPE} />
+    <meta property="og:image:width" content={OGP_WIDTH} />
+    <meta property="og:image:height" content={OGP_HEIGHT} />
+    <meta property="og:image" content={OGP_URL} />
+    <meta property="og:type" content={CATEGORY} />
+    <meta name="twitter:card" content={TWITTER_CARD_TYPE} />
+    <meta name="twitter:title" content={SITE_NAME} />
+    <meta name="twitter:description" content={description ?? DESCRIPTION} />
+    <meta name="twitter:image:type" content={OGP_TYPE} />
+    <meta name="twitter:image:width" content={OGP_WIDTH} />
+    <meta name="twitter:image:height" content={OGP_HEIGHT} />
+    <meta name="twitter:image" content={OGP_URL} />
   </head>
   <body>
     <Header />
