feat: メタデータの設定

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -8,9 +8,6 @@ import {
   FAVICON_TYPE,
   KEY_WORDS,
   OGP,
-  OGP_HEIGHT,
-  OGP_TYPE,
-  OGP_WIDTH,
   SITE_NAME,
   TWITTER_CARD_TYPE,
 } from '@/consts/meta';
@@ -18,9 +15,10 @@ import {
 interface Props {
   title?: string;
   description?: string;
+  ogp?: string;
   class?: string;
 }
-const { title, description, class: className, ...rest } = Astro.props;
+const { title, description, ogp, class: className, ...rest } = Astro.props;
 const OGP_URL = new URL(OGP.src, Astro.url).toString();
 ---
 
@@ -42,18 +40,12 @@ const OGP_URL = new URL(OGP.src, Astro.url).toString();
     <meta property="og:url" content={Astro.url} />
     <meta property="og:site_name" content={SITE_NAME} />
     <meta property="og:locale" content="ja_JP" />
-    <meta property="og:image:type" content={OGP_TYPE} />
-    <meta property="og:image:width" content={OGP_WIDTH} />
-    <meta property="og:image:height" content={OGP_HEIGHT} />
-    <meta property="og:image" content={OGP_URL} />
+    <meta property="og:image" content={ogp ?? OGP_URL} />
     <meta property="og:type" content={CATEGORY} />
     <meta name="twitter:card" content={TWITTER_CARD_TYPE} />
     <meta name="twitter:title" content={SITE_NAME} />
     <meta name="twitter:description" content={description ?? DESCRIPTION} />
-    <meta name="twitter:image:type" content={OGP_TYPE} />
-    <meta name="twitter:image:width" content={OGP_WIDTH} />
-    <meta name="twitter:image:height" content={OGP_HEIGHT} />
-    <meta name="twitter:image" content={OGP_URL} />
+    <meta name="twitter:image" content={ogp ?? OGP_URL} />
   </head>
   <body>
     <Header />
