feat: トップページのスタイル

--- a/src/pages/_sections/NoticeSection.astro
+++ b/src/pages/_sections/NoticeSection.astro
@@ -1,5 +1,6 @@
 ---
 import CardLayout from '@/layouts/CardLayout.astro';
+import mdStyle from '@/styles/md-style.scss?raw';
 
 interface Props {
   class?: string;
@@ -8,11 +9,14 @@ interface Props {
 const { class: className, ...props } = Astro.props;
 ---
 
-<CardLayout class={className} {...props} title='お知らせ'>
-  <h3>研究室見学について</h3>
-  <p>研究室見学を希望の方は下記のメールアドレスにて日程調整します．</p>
-  <a href="mailto:kaji@aitech.ac.jp">kaji@aitech.ac.jp</a>
+<CardLayout class={className} {...props} title="お知らせ">
+  <article data-page="post">
+    <h3>研究室見学について</h3>
+    <p>研究室見学を希望の方は下記のメールアドレスにて日程調整します．</p>
+    <a href="mailto:kaji@aitech.ac.jp">kaji@aitech.ac.jp</a>
+  </article>
 </CardLayout>
 
-<style lang="scss">
-</style>
+<style is:global set:html={mdStyle}></style>
+
+<style lang="scss"></style>
