--- a/src/styles/md-style.scss
+++ b/src/styles/md-style.scss
@@ -150,6 +150,16 @@ article[data-page='award'] {
 }
 
 article[data-page='post'] {
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6,
+  :first-child {
+    margin-top: 0;
+  }
+
   h1 {
     margin: 65px 0 10px;
     font-size: 1.8rem;
