--- a/src/components/PostCard/index.astro
+++ b/src/components/PostCard/index.astro
@@ -57,7 +57,7 @@ const { post } = Astro.props;
       }
 
       .thumbnail {
-        filter: brightness(3) blur(5px);
+        filter: blur(5px) opacity(0.3);
       }
     }
   }
