--- a/src/pages/post/[id].astro
+++ b/src/pages/post/[id].astro
@@ -3,7 +3,7 @@ import CardLayout from '@/layouts/CardLayout.astro';
 import Layout from '@/layouts/Layout.astro';
 import { getPosts, getThumbnail } from '@/utils/content';
 import { render } from 'astro:content';
-import mdStyle from '@/styles/md-style.scss?raw';
+import '@/styles/md-style.scss';
 import Thumbnail from '@/components/Thumbnail/index.astro';
 
 export async function getStaticPaths() {
@@ -28,8 +28,6 @@ const { Content } = await render(post);
     </article>
   </CardLayout>
 </Layout>
-
-<style is:global set:html={mdStyle}></style>
 
 <style lang="scss">
   .main {
