--- a/src/styles/md-style.scss
+++ b/src/styles/md-style.scss
@@ -149,7 +149,8 @@ article[data-page='award'] {
   }
 }
 
-article[data-page='post'] {
+article[data-page='post'],
+article[data-page='top'] {
   h1,
   h2,
   h3,
@@ -227,5 +228,13 @@ article[data-page='post'] {
   h6 + h5,
   h6 + h6 {
     margin-top: 0;
+  }
+}
+
+article[data-page='top'] {
+  h1,
+  h2,
+  h3 {
+    border-bottom: none;
   }
 }
