--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import NoticeSection from './_sections/NoticeSection.astro';
 import AboutSection from './_sections/AboutSection.astro';
 import NewsSection from './_sections/NewsSection.astro';
 import RecentPosts from './_sections/RecentPosts.astro';
+import TechStackSection from './_sections/TechStack.astro';
 ---
 
 <Layout class="main">
@@ -14,6 +15,7 @@ import RecentPosts from './_sections/RecentPosts.astro';
   </div>
 
   <NoticeSection class="notice-section" />
+  <TechStackSection class="techstack-section" />
   <AboutSection class="about-section" />
   <RecentPosts class="posts-section" />
 </Layout>
@@ -59,6 +61,7 @@ import RecentPosts from './_sections/RecentPosts.astro';
       }
     }
 
+    .techstack-section,
     .notice-section {
       grid-column: span 9;
 
