feat: レスポンシブ対応

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -83,6 +83,10 @@ const OGP_URL = new URL(OGP.src, Astro.url).toString();
     padding: 40px 24px 60px 20px;
     max-width: 1200px;
     min-height: $main-height;
+
+    @include mobile {
+      padding: 40px 12px 60px 10px;
+    }
   }
 
   a {
