feat: フォントを設定

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -65,6 +65,7 @@ const OGP_URL = new URL(OGP.src, Astro.url).toString();
 <style lang="scss" is:global>
   :root {
     font-size: 16px;
+    font-family: 'Source Sans Pro', Helvetica, sans-serif;
   }
 
   * {
