--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import Header from '@/components/Header/index.astro';
 import Footer from '@/components/Footer/index.astro';
+import Snow from '@/components/Snow/index.astro';
 import {
   CATEGORY,
   DESCRIPTION,
@@ -50,6 +51,7 @@ const OGP_URL = new URL(OGP.src, Astro.url).toString();
   </head>
   <body>
     <Header />
+    <Snow />
     <main class={className} {...rest}>
       <slot />
     </main>
