feat: copyright を動的に生成

--- a/src/components/Footer/index.astro
+++ b/src/components/Footer/index.astro
@@ -1,6 +1,10 @@
+---
+const year = new Date().getFullYear();
+---
+
 <footer>
   <div class="container">
-    <p class="copyright">© 2025 愛知工業大学 梶研究室</p>
+    <p class="copyright">© {year} 愛知工業大学 梶研究室</p>
 
     <div class="line"></div>
 
